加入如路由模块
routie本身兼容到IE6，无需history.js这个垫片

--- a/test/template.html
+++ b/test/template.html
@@ -3,9 +3,12 @@
 
 <head>
     <title>HTML模板文件</title>
-    <script type="text/javascript" src="js/lib/require.js"></script>
-    <script type="text/javascript" src="js/require.config.js"></script>
+    <script type="text/javascript" src="../js/lib/require.js"></script>
+    <script type="text/javascript" src="../js/require.config.js"></script>
     <script type="text/javascript">
+    require.config({
+        baseUrl: "../",
+    });
     /*
      * 声明页面的依赖
      * 就像java文件的头部需要声明import文件一样
